css-exercise-two-assignment

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,26 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: #ffffff;
+  color: #000000;
+  font-size: 16px;
 }
 
 nav {
-  background-color: rgba(0,0,0,.5);
+  background-color: #000000;
+  color: #ffffff;
   float: left;
   position: fixed;
   width: 100%;
 }
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:link { color:#DA70D6; }
+a:visited { color:#FFFFE0; }
+a:hover { color:#0070BC; }
+a:active { color:#0070BD; }
 
 .logo {
   margin: 20px;
@@ -48,5 +60,37 @@ article {
 
 .container {
   margin: 0 auto;
-  width: 50%;
+  width: 75%;
+}
+
+h1 {
+  font-size: 3em;
+  font-weight: bold;
+  padding-bottom: 25px;
+  line-height: 1.2;
+}
+
+h3 {
+  font-size: 2em;
+  line-height: 1.2;
+  padding-bottom: 25px;
+}
+
+figcaption {
+  font-size: 0.75em;
+  font-style: italic;
+  padding-bottom: 25px;
+}
+
+.author {
+  font-style: italic;
+  padding-bottom: 15px;
+}
+
+.story-text {
+  line-height: 1.6;
+}
+
+p {
+  padding-bottom: 16px;
 }
